--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Main Kittygram workflow
+name: Main Foodgram workflow
 
 on:
   push:
@@ -16,7 +16,7 @@ jobs:
           POSTGRES_PASSWORD: foodgram_password
           POSTGRES_DB: foodgram
         ports:
-          - 5432:5432
+          - 5434:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
     - uses: actions/checkout@v3
@@ -37,7 +37,7 @@ jobs:
         POSTGRES_DB: foodgram
         DB_NAME: foodgram
         DB_HOST: 127.0.0.1
-        DB_PORT: 5432
+        DB_PORT: 5434
       run: |
         python -m flake8 backend/
         cd backend/
@@ -151,7 +151,7 @@ jobs:
         key: ${{ secrets.SSH_KEY }}
         passphrase: ${{ secrets.SSH_PASSPHRASE }}
         script: |
-          cd kittygram
+          cd foodgram
           sudo docker compose -f docker-compose.production.yml pull
           sudo docker compose -f docker-compose.production.yml down
           sudo docker compose -f docker-compose.production.yml up -d
