--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,24 +1,33 @@
 server {
-  listen 80;
-  index index.html;
-  server_tokens off;
+    listen 80;
+    index index.html;
+    server_tokens off;
+    location /api/docs/ {
+        root /usr/share/nginx/html;
+        try_files $uri $uri/redoc.html;
+    }
 
-  location /api/ {
-    proxy_set_header Host $http_host;
-    proxy_pass http://backend:8080/api/;
-  }
-  location /admin/ {
-    proxy_set_header Host $http_host;
-    proxy_pass http://backend:8080/admin/;
-  }
+    location /api/ {
+        proxy_set_header Host $http_host;
+        proxy_pass http://backend:8080/api/;
+    }
 
-  location / {
-    alias /staticfiles/;
-    try_files $uri $uri/ /index.html;
-  }
+    location /admin/ {
+        proxy_set_header Host $http_host;
+        proxy_pass http://backend:8080/admin/;
+    }
+
+    location / {
+        alias /staticfiles/;
+        try_files $uri $uri/ /index.html;
+    }
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /var/html/frontend/;
+    }
   
-  location /media/ {
-    alias /media/;
-  }
+    location /media/ {
+        alias /media/;
+    }
 
 }
