--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       - static:/frontend_static
 
   gateway:
-    build: ./nginx/
+    build: ./infra/
     env_file: .env
     ports:
       - 8080:80
