--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,21 +1,33 @@
 server {
     listen 80;
+    index index.html;
+    server_tokens off;
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+
+    location /api/ {
+        proxy_set_header Host $http_host;
+        proxy_pass http://localhost:8000/api/;  # заменить на backend:8080
+    }
+
+    location /admin/ {
+        proxy_set_header Host $http_host;
+        proxy_pass http://localhost:8000/admin/;  # заменить на backend:8080
+    }
+
     location / {
-        root /usr/share/nginx/html;
-        index  index.html index.htm;
-        try_files $uri /index.html;
-        proxy_set_header        Host $host;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        X-Forwarded-Proto $scheme;
-      }
-      error_page   500 502 503 504  /50x.html;
-      location = /50x.html {
-        root   /var/html/frontend/;
-      }
+        alias /staticfiles/;
+        try_files $uri $uri/ /index.html;
+    }
+        error_page   500 502 503 504  /50x.html;
+        location = /50x.html {
+            root   /var/html/frontend/;
+        }
+
+    location /media/ {
+        alias /media/;
+    }
 
 }
