--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -26,8 +26,7 @@ services:
     ports:
       - "80:80"
     volumes:
-#      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-#      - ../frontend/build:/usr/share/nginx/html/
-#      - ../docs/:/usr/share/nginx/html/api/docs/
+      - ../frontend/build:/usr/share/nginx/html/
+      - ../docs/:/usr/share/nginx/html/api/docs/
       - media:/media
 
