--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -2,6 +2,8 @@ server {
     listen 80;
     index index.html;
     server_tokens off;
+    server_name 158.160.22.0 4aizFoodgram.hidehost.me;
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
@@ -21,13 +23,13 @@ server {
         alias /staticfiles/;
         try_files $uri $uri/ /index.html;
     }
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   /var/html/frontend/;
-        }
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /var/html/frontend/;
+    }
 
     location /media/ {
-        alias /media/;
+        alias var/html/media/;
     }
 
 }
