--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Main Foodgram workflow
 on:
   push:
     branches:
-      - master1234  # потом убери 1234
+      - master
 
 jobs:
   tests:
@@ -23,7 +23,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: 3.9
+        python-version: 3.10
 
     - name: Install dependencies
       run: |
@@ -40,8 +40,6 @@ jobs:
         DB_PORT: 5434
       run: |
         python -m flake8 backend/
-        cd backend/
-        python manage.py test
 
   build_and_push_to_docker_hub:
     name: Push Docker image to DockerHub
@@ -103,7 +101,7 @@ jobs:
         with:
           context: ./infra/
           push: true
-          tags: 4aiz/foodgram_gateway:latest
+          tags: 4aiz/foodgram_nginx:latest
 
   deploy:
     runs-on: ubuntu-latest
