--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip 
-        pip install flake8==6.0.0 flake8-isort==6.0.0
-        pip install -r ./backend/requirements.txt 
+        pip install flake8==6.0.0
+        pip install -r ./backend/requirements.txt
     - name: Test with flake8 and django tests
       env:
         POSTGRES_USER: foodgram_user
