--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -99,7 +99,7 @@ jobs:
         with:
           context: ./infra/
           push: true
-          tags: 4aiz/foodgram_nginx:latest
+          tags: 4aiz/foodgram_gateway:latest
 
   deploy:
     runs-on: ubuntu-latest
@@ -128,13 +128,12 @@ jobs:
         passphrase: ${{ secrets.SSH_PASSPHRASE }}
         script: |
           cd foodgram
-          sudo touch new_file
-#          sudo docker compose -f docker-compose.production.yml pull
-#          sudo docker compose -f docker-compose.production.yml down
-#          sudo docker compose -f docker-compose.production.yml up -d
-#          sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
-#          sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic
-#          sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /backend_static/static/
+          sudo docker compose -f docker-compose.production.yml pull
+          sudo docker compose -f docker-compose.production.yml down
+          sudo docker compose -f docker-compose.production.yml up -d
+          sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
+          sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic
+          sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /backend_static/static/
 
   send_message:
     runs-on: ubuntu-latest
