--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -11,12 +11,12 @@ server {
 
     location /api/ {
         proxy_set_header Host $http_host;
-        proxy_pass http://localhost:8000/api/;  # заменить на backend:8080
+        proxy_pass http://backend:8080/api/;  # заменить на backend:8080
     }
 
     location /admin/ {
         proxy_set_header Host $http_host;
-        proxy_pass http://localhost:8000/admin/;  # заменить на backend:8080
+        proxy_pass http://backend:8080/admin/;  # заменить на backend:8080
     }
 
     location / {
